@@ -2,6 +2,7 @@ CHANGELOG
 
 2.0.16
 UTILS:
+* pa_panos-xml-issue-detector | improvement to use parent methods from class UTIL
 
 BUGFIX:
 
